parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER declarations statements END
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declarations -> empty
Rule 5     declaration -> INTEGER var_list
Rule 6     declaration -> REAL var_list
Rule 7     declaration -> LOGICAL var_list
Rule 8     var_list -> var_list SYMBOL var_decl
Rule 9     var_list -> var_decl
Rule 10    var_decl -> IDENTIFIER
Rule 11    var_decl -> IDENTIFIER SYMBOL NUMBER SYMBOL
Rule 12    statements -> statements statement
Rule 13    statements -> statement
Rule 14    statements -> empty
Rule 15    statement -> variable RELOP expression
Rule 16    statement -> PRINT SYMBOL print_list
Rule 17    print_list -> print_list SYMBOL print_item
Rule 18    print_list -> print_item
Rule 19    print_item -> STRING
Rule 20    print_item -> expression
Rule 21    statement -> READ SYMBOL read_list
Rule 22    read_list -> read_list SYMBOL variable
Rule 23    read_list -> variable
Rule 24    statement -> DO NUMBER IDENTIFIER OPERATOR expression SYMBOL expression statements NUMBER CONTINUE
Rule 25    statement -> GOTO NUMBER
Rule 26    statement -> IF SYMBOL condition SYMBOL THEN statements ENDIF
Rule 27    statement -> IF SYMBOL condition SYMBOL THEN statements ELSE statements ENDIF
Rule 28    condition -> expression RELOP expression
Rule 29    condition -> condition LOGOP condition
Rule 30    condition -> SYMBOL condition SYMBOL
Rule 31    condition -> TRUE
Rule 32    condition -> FALSE
Rule 33    expression -> expression OPERATOR expression
Rule 34    expression -> NUMBER
Rule 35    expression -> REAL_NUMBER
Rule 36    expression -> variable
Rule 37    expression -> SYMBOL expression SYMBOL
Rule 38    variable -> IDENTIFIER
Rule 39    variable -> IDENTIFIER SYMBOL expression SYMBOL
Rule 40    empty -> <empty>

Terminals, with rules where they appear

CONTINUE             : 24
DO                   : 24
ELSE                 : 27
END                  : 1
ENDIF                : 26 27
FALSE                : 32
GOTO                 : 25
IDENTIFIER           : 1 10 11 24 38 39
IF                   : 26 27
INTEGER              : 5
LOGICAL              : 7
LOGOP                : 29
NUMBER               : 11 24 24 25 34
OPERATOR             : 24 33
PRINT                : 16
PROGRAM              : 1
READ                 : 21
REAL                 : 6
REAL_NUMBER          : 35
RELOP                : 15 28
STRING               : 19
SYMBOL               : 8 11 11 16 17 21 22 24 26 26 27 27 30 30 37 37 39 39
THEN                 : 26 27
TRUE                 : 31
error                : 

Nonterminals, with rules where they appear

condition            : 26 27 29 29 30
declaration          : 2 3
declarations         : 1 2
empty                : 4 14
expression           : 15 20 24 24 28 28 33 33 37 39
print_item           : 17 18
print_list           : 16 17
program              : 0
read_list            : 21 22
statement            : 12 13
statements           : 1 12 24 26 27 27
var_decl             : 8 9
var_list             : 5 6 7 8
variable             : 15 22 23 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER declarations statements END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER declarations statements END

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . declarations statements END
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declarations -> . empty
    (5) declaration -> . INTEGER var_list
    (6) declaration -> . REAL var_list
    (7) declaration -> . LOGICAL var_list
    (40) empty -> .

  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for LOGICAL resolved as shift
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    LOGICAL         shift and go to state 9
    PRINT           reduce using rule 40 (empty -> .)
    READ            reduce using rule 40 (empty -> .)
    DO              reduce using rule 40 (empty -> .)
    GOTO            reduce using rule 40 (empty -> .)
    IF              reduce using rule 40 (empty -> .)
    IDENTIFIER      reduce using rule 40 (empty -> .)
    END             reduce using rule 40 (empty -> .)

  ! INTEGER         [ reduce using rule 40 (empty -> .) ]
  ! REAL            [ reduce using rule 40 (empty -> .) ]
  ! LOGICAL         [ reduce using rule 40 (empty -> .) ]

    declarations                   shift and go to state 4
    declaration                    shift and go to state 5
    empty                          shift and go to state 6

state 4

    (1) program -> PROGRAM IDENTIFIER declarations . statements END
    (2) declarations -> declarations . declaration
    (12) statements -> . statements statement
    (13) statements -> . statement
    (14) statements -> . empty
    (5) declaration -> . INTEGER var_list
    (6) declaration -> . REAL var_list
    (7) declaration -> . LOGICAL var_list
    (15) statement -> . variable RELOP expression
    (16) statement -> . PRINT SYMBOL print_list
    (21) statement -> . READ SYMBOL read_list
    (24) statement -> . DO NUMBER IDENTIFIER OPERATOR expression SYMBOL expression statements NUMBER CONTINUE
    (25) statement -> . GOTO NUMBER
    (26) statement -> . IF SYMBOL condition SYMBOL THEN statements ENDIF
    (27) statement -> . IF SYMBOL condition SYMBOL THEN statements ELSE statements ENDIF
    (40) empty -> .
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for GOTO resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    LOGICAL         shift and go to state 9
    PRINT           shift and go to state 16
    READ            shift and go to state 17
    DO              shift and go to state 18
    GOTO            shift and go to state 19
    IF              shift and go to state 20
    END             reduce using rule 40 (empty -> .)
    IDENTIFIER      shift and go to state 10

  ! PRINT           [ reduce using rule 40 (empty -> .) ]
  ! READ            [ reduce using rule 40 (empty -> .) ]
  ! DO              [ reduce using rule 40 (empty -> .) ]
  ! GOTO            [ reduce using rule 40 (empty -> .) ]
  ! IF              [ reduce using rule 40 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 40 (empty -> .) ]

    statements                     shift and go to state 11
    declaration                    shift and go to state 12
    statement                      shift and go to state 13
    empty                          shift and go to state 14
    variable                       shift and go to state 15

state 5

    (3) declarations -> declaration .

    INTEGER         reduce using rule 3 (declarations -> declaration .)
    REAL            reduce using rule 3 (declarations -> declaration .)
    LOGICAL         reduce using rule 3 (declarations -> declaration .)
    PRINT           reduce using rule 3 (declarations -> declaration .)
    READ            reduce using rule 3 (declarations -> declaration .)
    DO              reduce using rule 3 (declarations -> declaration .)
    GOTO            reduce using rule 3 (declarations -> declaration .)
    IF              reduce using rule 3 (declarations -> declaration .)
    IDENTIFIER      reduce using rule 3 (declarations -> declaration .)
    END             reduce using rule 3 (declarations -> declaration .)


state 6

    (4) declarations -> empty .

    INTEGER         reduce using rule 4 (declarations -> empty .)
    REAL            reduce using rule 4 (declarations -> empty .)
    LOGICAL         reduce using rule 4 (declarations -> empty .)
    PRINT           reduce using rule 4 (declarations -> empty .)
    READ            reduce using rule 4 (declarations -> empty .)
    DO              reduce using rule 4 (declarations -> empty .)
    GOTO            reduce using rule 4 (declarations -> empty .)
    IF              reduce using rule 4 (declarations -> empty .)
    IDENTIFIER      reduce using rule 4 (declarations -> empty .)
    END             reduce using rule 4 (declarations -> empty .)


state 7

    (5) declaration -> INTEGER . var_list
    (8) var_list -> . var_list SYMBOL var_decl
    (9) var_list -> . var_decl
    (10) var_decl -> . IDENTIFIER
    (11) var_decl -> . IDENTIFIER SYMBOL NUMBER SYMBOL

    IDENTIFIER      shift and go to state 23

    var_list                       shift and go to state 21
    var_decl                       shift and go to state 22

state 8

    (6) declaration -> REAL . var_list
    (8) var_list -> . var_list SYMBOL var_decl
    (9) var_list -> . var_decl
    (10) var_decl -> . IDENTIFIER
    (11) var_decl -> . IDENTIFIER SYMBOL NUMBER SYMBOL

    IDENTIFIER      shift and go to state 23

    var_list                       shift and go to state 24
    var_decl                       shift and go to state 22

state 9

    (7) declaration -> LOGICAL . var_list
    (8) var_list -> . var_list SYMBOL var_decl
    (9) var_list -> . var_decl
    (10) var_decl -> . IDENTIFIER
    (11) var_decl -> . IDENTIFIER SYMBOL NUMBER SYMBOL

    IDENTIFIER      shift and go to state 23

    var_list                       shift and go to state 25
    var_decl                       shift and go to state 22

state 10

    (38) variable -> IDENTIFIER .
    (39) variable -> IDENTIFIER . SYMBOL expression SYMBOL

  ! shift/reduce conflict for SYMBOL resolved as shift
    RELOP           reduce using rule 38 (variable -> IDENTIFIER .)
    OPERATOR        reduce using rule 38 (variable -> IDENTIFIER .)
    END             reduce using rule 38 (variable -> IDENTIFIER .)
    PRINT           reduce using rule 38 (variable -> IDENTIFIER .)
    READ            reduce using rule 38 (variable -> IDENTIFIER .)
    DO              reduce using rule 38 (variable -> IDENTIFIER .)
    GOTO            reduce using rule 38 (variable -> IDENTIFIER .)
    IF              reduce using rule 38 (variable -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 38 (variable -> IDENTIFIER .)
    ENDIF           reduce using rule 38 (variable -> IDENTIFIER .)
    ELSE            reduce using rule 38 (variable -> IDENTIFIER .)
    NUMBER          reduce using rule 38 (variable -> IDENTIFIER .)
    LOGOP           reduce using rule 38 (variable -> IDENTIFIER .)
    SYMBOL          shift and go to state 26

  ! SYMBOL          [ reduce using rule 38 (variable -> IDENTIFIER .) ]


state 11

    (1) program -> PROGRAM IDENTIFIER declarations statements . END
    (12) statements -> statements . statement
    (15) statement -> . variable RELOP expression
    (16) statement -> . PRINT SYMBOL print_list
    (21) statement -> . READ SYMBOL read_list
    (24) statement -> . DO NUMBER IDENTIFIER OPERATOR expression SYMBOL expression statements NUMBER CONTINUE
    (25) statement -> . GOTO NUMBER
    (26) statement -> . IF SYMBOL condition SYMBOL THEN statements ENDIF
    (27) statement -> . IF SYMBOL condition SYMBOL THEN statements ELSE statements ENDIF
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    END             shift and go to state 27
    PRINT           shift and go to state 16
    READ            shift and go to state 17
    DO              shift and go to state 18
    GOTO            shift and go to state 19
    IF              shift and go to state 20
    IDENTIFIER      shift and go to state 10

    statement                      shift and go to state 28
    variable                       shift and go to state 15

state 12

    (2) declarations -> declarations declaration .

    INTEGER         reduce using rule 2 (declarations -> declarations declaration .)
    REAL            reduce using rule 2 (declarations -> declarations declaration .)
    LOGICAL         reduce using rule 2 (declarations -> declarations declaration .)
    PRINT           reduce using rule 2 (declarations -> declarations declaration .)
    READ            reduce using rule 2 (declarations -> declarations declaration .)
    DO              reduce using rule 2 (declarations -> declarations declaration .)
    GOTO            reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    IDENTIFIER      reduce using rule 2 (declarations -> declarations declaration .)
    END             reduce using rule 2 (declarations -> declarations declaration .)


state 13

    (13) statements -> statement .

    END             reduce using rule 13 (statements -> statement .)
    PRINT           reduce using rule 13 (statements -> statement .)
    READ            reduce using rule 13 (statements -> statement .)
    DO              reduce using rule 13 (statements -> statement .)
    GOTO            reduce using rule 13 (statements -> statement .)
    IF              reduce using rule 13 (statements -> statement .)
    IDENTIFIER      reduce using rule 13 (statements -> statement .)
    ENDIF           reduce using rule 13 (statements -> statement .)
    ELSE            reduce using rule 13 (statements -> statement .)
    NUMBER          reduce using rule 13 (statements -> statement .)


state 14

    (14) statements -> empty .

    END             reduce using rule 14 (statements -> empty .)
    PRINT           reduce using rule 14 (statements -> empty .)
    READ            reduce using rule 14 (statements -> empty .)
    DO              reduce using rule 14 (statements -> empty .)
    GOTO            reduce using rule 14 (statements -> empty .)
    IF              reduce using rule 14 (statements -> empty .)
    IDENTIFIER      reduce using rule 14 (statements -> empty .)
    ENDIF           reduce using rule 14 (statements -> empty .)
    ELSE            reduce using rule 14 (statements -> empty .)
    NUMBER          reduce using rule 14 (statements -> empty .)


state 15

    (15) statement -> variable . RELOP expression

    RELOP           shift and go to state 29


state 16

    (16) statement -> PRINT . SYMBOL print_list

    SYMBOL          shift and go to state 30


state 17

    (21) statement -> READ . SYMBOL read_list

    SYMBOL          shift and go to state 31


state 18

    (24) statement -> DO . NUMBER IDENTIFIER OPERATOR expression SYMBOL expression statements NUMBER CONTINUE

    NUMBER          shift and go to state 32


state 19

    (25) statement -> GOTO . NUMBER

    NUMBER          shift and go to state 33


state 20

    (26) statement -> IF . SYMBOL condition SYMBOL THEN statements ENDIF
    (27) statement -> IF . SYMBOL condition SYMBOL THEN statements ELSE statements ENDIF

    SYMBOL          shift and go to state 34


state 21

    (5) declaration -> INTEGER var_list .
    (8) var_list -> var_list . SYMBOL var_decl

    INTEGER         reduce using rule 5 (declaration -> INTEGER var_list .)
    REAL            reduce using rule 5 (declaration -> INTEGER var_list .)
    LOGICAL         reduce using rule 5 (declaration -> INTEGER var_list .)
    PRINT           reduce using rule 5 (declaration -> INTEGER var_list .)
    READ            reduce using rule 5 (declaration -> INTEGER var_list .)
    DO              reduce using rule 5 (declaration -> INTEGER var_list .)
    GOTO            reduce using rule 5 (declaration -> INTEGER var_list .)
    IF              reduce using rule 5 (declaration -> INTEGER var_list .)
    IDENTIFIER      reduce using rule 5 (declaration -> INTEGER var_list .)
    END             reduce using rule 5 (declaration -> INTEGER var_list .)
    SYMBOL          shift and go to state 35


state 22

    (9) var_list -> var_decl .

    SYMBOL          reduce using rule 9 (var_list -> var_decl .)
    INTEGER         reduce using rule 9 (var_list -> var_decl .)
    REAL            reduce using rule 9 (var_list -> var_decl .)
    LOGICAL         reduce using rule 9 (var_list -> var_decl .)
    PRINT           reduce using rule 9 (var_list -> var_decl .)
    READ            reduce using rule 9 (var_list -> var_decl .)
    DO              reduce using rule 9 (var_list -> var_decl .)
    GOTO            reduce using rule 9 (var_list -> var_decl .)
    IF              reduce using rule 9 (var_list -> var_decl .)
    IDENTIFIER      reduce using rule 9 (var_list -> var_decl .)
    END             reduce using rule 9 (var_list -> var_decl .)


state 23

    (10) var_decl -> IDENTIFIER .
    (11) var_decl -> IDENTIFIER . SYMBOL NUMBER SYMBOL

  ! shift/reduce conflict for SYMBOL resolved as shift
    INTEGER         reduce using rule 10 (var_decl -> IDENTIFIER .)
    REAL            reduce using rule 10 (var_decl -> IDENTIFIER .)
    LOGICAL         reduce using rule 10 (var_decl -> IDENTIFIER .)
    PRINT           reduce using rule 10 (var_decl -> IDENTIFIER .)
    READ            reduce using rule 10 (var_decl -> IDENTIFIER .)
    DO              reduce using rule 10 (var_decl -> IDENTIFIER .)
    GOTO            reduce using rule 10 (var_decl -> IDENTIFIER .)
    IF              reduce using rule 10 (var_decl -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 10 (var_decl -> IDENTIFIER .)
    END             reduce using rule 10 (var_decl -> IDENTIFIER .)
    SYMBOL          shift and go to state 36

  ! SYMBOL          [ reduce using rule 10 (var_decl -> IDENTIFIER .) ]


state 24

    (6) declaration -> REAL var_list .
    (8) var_list -> var_list . SYMBOL var_decl

    INTEGER         reduce using rule 6 (declaration -> REAL var_list .)
    REAL            reduce using rule 6 (declaration -> REAL var_list .)
    LOGICAL         reduce using rule 6 (declaration -> REAL var_list .)
    PRINT           reduce using rule 6 (declaration -> REAL var_list .)
    READ            reduce using rule 6 (declaration -> REAL var_list .)
    DO              reduce using rule 6 (declaration -> REAL var_list .)
    GOTO            reduce using rule 6 (declaration -> REAL var_list .)
    IF              reduce using rule 6 (declaration -> REAL var_list .)
    IDENTIFIER      reduce using rule 6 (declaration -> REAL var_list .)
    END             reduce using rule 6 (declaration -> REAL var_list .)
    SYMBOL          shift and go to state 35


state 25

    (7) declaration -> LOGICAL var_list .
    (8) var_list -> var_list . SYMBOL var_decl

    INTEGER         reduce using rule 7 (declaration -> LOGICAL var_list .)
    REAL            reduce using rule 7 (declaration -> LOGICAL var_list .)
    LOGICAL         reduce using rule 7 (declaration -> LOGICAL var_list .)
    PRINT           reduce using rule 7 (declaration -> LOGICAL var_list .)
    READ            reduce using rule 7 (declaration -> LOGICAL var_list .)
    DO              reduce using rule 7 (declaration -> LOGICAL var_list .)
    GOTO            reduce using rule 7 (declaration -> LOGICAL var_list .)
    IF              reduce using rule 7 (declaration -> LOGICAL var_list .)
    IDENTIFIER      reduce using rule 7 (declaration -> LOGICAL var_list .)
    END             reduce using rule 7 (declaration -> LOGICAL var_list .)
    SYMBOL          shift and go to state 35


state 26

    (39) variable -> IDENTIFIER SYMBOL . expression SYMBOL
    (33) expression -> . expression OPERATOR expression
    (34) expression -> . NUMBER
    (35) expression -> . REAL_NUMBER
    (36) expression -> . variable
    (37) expression -> . SYMBOL expression SYMBOL
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    SYMBOL          shift and go to state 37
    IDENTIFIER      shift and go to state 10

    expression                     shift and go to state 38
    variable                       shift and go to state 41

state 27

    (1) program -> PROGRAM IDENTIFIER declarations statements END .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER declarations statements END .)


state 28

    (12) statements -> statements statement .

    END             reduce using rule 12 (statements -> statements statement .)
    PRINT           reduce using rule 12 (statements -> statements statement .)
    READ            reduce using rule 12 (statements -> statements statement .)
    DO              reduce using rule 12 (statements -> statements statement .)
    GOTO            reduce using rule 12 (statements -> statements statement .)
    IF              reduce using rule 12 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 12 (statements -> statements statement .)
    ENDIF           reduce using rule 12 (statements -> statements statement .)
    ELSE            reduce using rule 12 (statements -> statements statement .)
    NUMBER          reduce using rule 12 (statements -> statements statement .)


state 29

    (15) statement -> variable RELOP . expression
    (33) expression -> . expression OPERATOR expression
    (34) expression -> . NUMBER
    (35) expression -> . REAL_NUMBER
    (36) expression -> . variable
    (37) expression -> . SYMBOL expression SYMBOL
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    SYMBOL          shift and go to state 37
    IDENTIFIER      shift and go to state 10

    variable                       shift and go to state 41
    expression                     shift and go to state 42

state 30

    (16) statement -> PRINT SYMBOL . print_list
    (17) print_list -> . print_list SYMBOL print_item
    (18) print_list -> . print_item
    (19) print_item -> . STRING
    (20) print_item -> . expression
    (33) expression -> . expression OPERATOR expression
    (34) expression -> . NUMBER
    (35) expression -> . REAL_NUMBER
    (36) expression -> . variable
    (37) expression -> . SYMBOL expression SYMBOL
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    STRING          shift and go to state 45
    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    SYMBOL          shift and go to state 37
    IDENTIFIER      shift and go to state 10

    print_list                     shift and go to state 43
    print_item                     shift and go to state 44
    expression                     shift and go to state 46
    variable                       shift and go to state 41

state 31

    (21) statement -> READ SYMBOL . read_list
    (22) read_list -> . read_list SYMBOL variable
    (23) read_list -> . variable
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    IDENTIFIER      shift and go to state 10

    read_list                      shift and go to state 47
    variable                       shift and go to state 48

state 32

    (24) statement -> DO NUMBER . IDENTIFIER OPERATOR expression SYMBOL expression statements NUMBER CONTINUE

    IDENTIFIER      shift and go to state 49


state 33

    (25) statement -> GOTO NUMBER .

    END             reduce using rule 25 (statement -> GOTO NUMBER .)
    PRINT           reduce using rule 25 (statement -> GOTO NUMBER .)
    READ            reduce using rule 25 (statement -> GOTO NUMBER .)
    DO              reduce using rule 25 (statement -> GOTO NUMBER .)
    GOTO            reduce using rule 25 (statement -> GOTO NUMBER .)
    IF              reduce using rule 25 (statement -> GOTO NUMBER .)
    IDENTIFIER      reduce using rule 25 (statement -> GOTO NUMBER .)
    ENDIF           reduce using rule 25 (statement -> GOTO NUMBER .)
    ELSE            reduce using rule 25 (statement -> GOTO NUMBER .)
    NUMBER          reduce using rule 25 (statement -> GOTO NUMBER .)


state 34

    (26) statement -> IF SYMBOL . condition SYMBOL THEN statements ENDIF
    (27) statement -> IF SYMBOL . condition SYMBOL THEN statements ELSE statements ENDIF
    (28) condition -> . expression RELOP expression
    (29) condition -> . condition LOGOP condition
    (30) condition -> . SYMBOL condition SYMBOL
    (31) condition -> . TRUE
    (32) condition -> . FALSE
    (33) expression -> . expression OPERATOR expression
    (34) expression -> . NUMBER
    (35) expression -> . REAL_NUMBER
    (36) expression -> . variable
    (37) expression -> . SYMBOL expression SYMBOL
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    SYMBOL          shift and go to state 50
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    IDENTIFIER      shift and go to state 10

    condition                      shift and go to state 51
    expression                     shift and go to state 52
    variable                       shift and go to state 41

state 35

    (8) var_list -> var_list SYMBOL . var_decl
    (10) var_decl -> . IDENTIFIER
    (11) var_decl -> . IDENTIFIER SYMBOL NUMBER SYMBOL

    IDENTIFIER      shift and go to state 23

    var_decl                       shift and go to state 55

state 36

    (11) var_decl -> IDENTIFIER SYMBOL . NUMBER SYMBOL

    NUMBER          shift and go to state 56


state 37

    (37) expression -> SYMBOL . expression SYMBOL
    (33) expression -> . expression OPERATOR expression
    (34) expression -> . NUMBER
    (35) expression -> . REAL_NUMBER
    (36) expression -> . variable
    (37) expression -> . SYMBOL expression SYMBOL
    (38) variable -> . IDENTIFIER
    (39) variable -> . IDENTIFIER SYMBOL expression SYMBOL

    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    SYMBOL          shift and go to state 37
    IDENTIFIER      shift and go to state 10

    expression                     shift and go to state 57
    variable                       shift and go to state 41

state 38

    (39) variable -> IDENTIFIER SYMBOL expression . SYMBOL
    (33) expression -> expression . OPERATOR expression

    SYMBOL          shift and go to state 58
    OPERATOR        shift and go to state 59


state 39

    (34) expression -> NUMBER .

    SYMBOL          reduce using rule 34 (expression -> NUMBER .)
    OPERATOR        reduce using rule 34 (expression -> NUMBER .)
    END             reduce using rule 34 (expression -> NUMBER .)
    PRINT           reduce using rule 34 (expression -> NUMBER .)
    READ            reduce using rule 34 (expression -> NUMBER .)
    DO              reduce using rule 34 (expression -> NUMBER .)
    GOTO            reduce using rule 34 (expression -> NUMBER .)
    IF              reduce using rule 34 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 34 (expression -> NUMBER .)
    ENDIF           reduce using rule 34 (expression -> NUMBER .)
    ELSE            reduce using rule 34 (expression -> NUMBER .)
    NUMBER          reduce using rule 34 (expression -> NUMBER .)
    RELOP           reduce using rule 34 (expression -> NUMBER .)
    LOGOP           reduce using rule 34 (expression -> NUMBER .)


state 40

    (35) expression -> REAL_NUMBER .

    SYMBOL          reduce using rule 35 (expression -> REAL_NUMBER .)
    OPERATOR        reduce using rule 35 (expression -> REAL_NUMBER .)
    END             reduce using rule 35 (expression -> REAL_NUMBER .)
    PRINT           reduce using rule 35 (expression -> REAL_NUMBER .)
    READ            reduce using rule 35 (expression -> REAL_NUMBER .)
    DO              reduce using rule 35 (expression -> REAL_NUMBER .)
    GOTO            reduce using rule 35 (expression -> REAL_NUMBER .)
    IF              reduce using rule 35 (expression -> REAL_NUMBER .)
    IDENTIFIER      reduce using rule 35 (expression -> REAL_NUMBER .)
    ENDIF           reduce using rule 35 (expression -> REAL_NUMBER .)
    ELSE            reduce using rule 35 (expression -> REAL_NUMBER .)
    NUMBER          reduce using rule 35 (expression -> REAL_NUMBER .)
    RELOP           reduce using rule 35 (expression -> REAL_NUMBER .)
    LOGOP           reduce using rule 35 (expression -> REAL_NUMBER .)


state 41

    (36) expression -> variable .

    SYMBOL          reduce using rule 36 (expression -> variable .)
    OPERATOR        reduce using rule 36 (expression -> variable .)
    END             reduce using rule 36 (expression -> variable .)
    PRINT           reduce using rule 36 (expression -> variable .)
    READ            reduce using rule 36 (expression -> variable .)
    DO              reduce using rule 36 (expression -> variable .)
    GOTO            reduce using rule 36 (expression -> variable .)
    IF              reduce using rule 36 (expression -> variable .)
    IDENTIFIER      reduce using rule 36 (expression -> variable .)
    ENDIF           reduce using rule 36 (expression -> variable .)
    ELSE            reduce using rule 36 (expression -> variable .)
    NUMBER          reduce using rule 36 (expression -> variable .)
    RELOP           reduce using rule 36 (expression -> variable .)
    LOGOP           reduce using rule 36 (expression -> variable .)


state 42

    (15) statement -> variable RELOP expression .
    (33) expression -> expression . OPERATOR expression

    END             reduce using rule 15 (statement -> variable RELOP expression .)
    PRINT           reduce using rule 15 (statement -> variable RELOP expression .)
    READ            reduce using rule 15 (statement -> variable RELOP expression .)
    DO              reduce using rule 15 (statement -> variable RELOP expression .)
    GOTO            reduce using rule 15 (statement -> variable RELOP expression .)
    IF              reduce using rule 15 (statement -> variable RELOP expression .)
    IDENTIFIER      reduce using rule 15 (statement -> variable RELOP expression .)
    ENDIF           reduce using rule 15 (statement -> variable RELOP expression .)
    ELSE            reduce using rule 15 (statement -> variable RELOP expression .)
    NUMBER          reduce using rule 15 (statement -> variable RELOP expression .)
    OPERATOR        shift and go to state 59


state 43

    (16) statement -> PRINT SYMBOL print_list .
    (17) print_list -> print_list . SYMBOL print_item

    END             reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    PRINT           reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    READ            reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    DO              reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    GOTO            reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    IF              reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    IDENTIFIER      reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    ENDIF           reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    ELSE            reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    NUMBER          reduce using rule 16 (statement -> PRINT SYMBOL print_list .)
    SYMBOL          shift and go to state 60


state 44

    (18) print_list -> print_item .

    SYMBOL          reduce using rule 18 (print_list -> print_item .)
    END             reduce using rule 18 (print_list -> print_item .)
    PRINT           reduce using rule 18 (print_list -> print_item .)
    READ            reduce using rule 18 (print_list -> print_item .)
    DO              reduce using rule 18 (print_list -> print_item .)
    GOTO            reduce using rule 18 (print_list -> print_item .)
    IF              reduce using rule 18 (print_list -> print_item .)
    IDENTIFIER      reduce using rule 18 (print_list -> print_item .)
    ENDIF           reduce using rule 18 (print_list -> print_item .)
    ELSE            reduce using rule 18 (print_list -> print_item .)
    NUMBER          reduce using rule 18 (print_list -> print_item .)


state 45

    (19) print_item -> STRING .

    SYMBOL          reduce using rule 19 (print_item -> STRING .)
    END             reduce using rule 19 (print_item -> STRING .)
    PRINT           reduce using rule 19 (print_item -> STRING .)
    READ            reduce using rule 19 (print_item -> STRING .)
    DO              reduce using rule 19 (print_item -> STRING .)
    GOTO            reduce using rule 19 (print_item -> STRING .)
    IF              reduce using rule 19 (print_item -> STRING .)
    IDENTIFIER      reduce using rule 19 (print_item -> STRING .)
    ENDIF           reduce using rule 19 (print_item -> STRING .)
    ELSE            reduce using rule 19 (print_item -> STRING .)
    NUMBER          reduce using rule 19 (print_item -> STRING .)


state 46

    (20) print_item -> expression .
    (33) expression -> expression . OPERATOR expression

    SYMBOL          reduce using rule 20 (print_item -> expression .)
    END             reduce using rule 20 (print_item -> expression .)
    PRINT           reduce using rule 20 (print_item -> expression .)
    READ            reduce using rule 20 (print_item -> expression .)
    DO              reduce using rule 20 (print_item -> expression .)
    GOTO            reduce using rule 20 (print_item -> expression .)
    IF              reduce using rule 20 (print_item -> expression .)
    IDENTIFIER      reduce using rule 20 (print_item -> expression .)
    ENDIF           reduce using rule 20 (print_item -> expression .)
    ELSE            reduce using rule 20 (print_item -> expression .)
    NUMBER          reduce using rule 20 (print_item -> expression .)
    OPERATOR        shift and go to state 59


state 47

    (21) statement -> READ SYMBOL read_list .
    (22) read_list -> read_list . SYMBOL variable

    END             reduce using rule 21 (statement -> READ SYMBOL read_list .)
    PRINT           reduce using rule 21 (statement -> READ SYMBOL read_list .)
    READ            reduce using rule 21 (statement -> READ SYMBOL read_list .)
    DO              reduce using rule 21 (statement -> READ SYMBOL read_list .)
    GOTO            reduce using rule 21 (statement -> READ SYMBOL read_list .)
    IF              reduce using rule 21 (statement -> READ SYMBOL read_list .)
    IDENTIFIER      reduce using rule 21 (statement -> READ SYMBOL read_list .)
    ENDIF           reduce using rule 21 (statement -> READ SYMBOL read_list .)
    ELSE            reduce using rule 21 (statement -> READ SYMBOL read_list .)
    NUMBER          reduce using rule 21 (statement -> READ SYMBOL read_list .)
    SYMBOL          shift and go to state 61


state 48

    (23) read_list -> variable .
